[metadata]
name = collvan
description = a suite of tools to make writing Collver programs easier
author = aidnem
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    collvan
install_requires =
    pygls>=1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
        collvan = collvan:run_console

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.971
    flake8>=6.0
    tox>=4.2

[options.package_data]
collvan = py.typed

[flake8]
max-line-length = 160
